Changelog
=========

1.0rc2 - unreleased
-------------------

* Fix line endings for included external content.

1.0rc1 - 2011-05-24
-------------------

* Fix diazocompiler --output option.

1.0b4 - 2011-05-17
------------------

* Implement drop theme-children.

1.0b3 - 2011-05-16
------------------

* Filter out additional xmlns with notheme.

1.0b2 - 2011-04-27
------------------

* Enable attribute to be included from external documents.

* Enable use of variables/parameters in drop/strip/replace content rule
  conditions.

* Fix a bug whereby a theme could not be loaded from a network location
  even if read_network was enabled.

1.0b1 - 2011-04-22
------------------

* Updated css namespace url to http://namespaces.plone.org/diazo/css

* Added <replace content="...">...</replace> directive.

* Added the ``wsgi`` module, which contains a WSGI middleware filter for
  applying a Diazo themes, as well as a lower level one for applying an
  XSLT transformation to HTML output.

* Moved documentation from the README to the diazo.org website. See
  http://svn.plone.org/svn/plone/plone.org/diazo-docs/trunk.

* Added ``<merge />`` directive

* Added ``<notheme />`` directive

* Added ``<strip />`` directive

* Revised rule set to be based on ``theme-children`` and ``content-children``
  and an explicit ``attributes`` parameter. ``<copy />`` is now only used for
  copying of attributes. ``<prepend />`` and ``<append />`` are deprecated
  in favour of ``<before />`` and ``<after />`` using ``theme-children``.

* Use experimental.cssselect to better work with location paths.

* Renamed XDV to Diazo.

0.4b3 - 2010-09-09
------------------

* Path conditions with @if-path.

* Serialize using XSLT method in diazorun to respect <xsl:output method="html"/>

* Fix for default theme.

* Fix for themes in nested rules tags.

0.4b2 - 2010-08-16
------------------

* When no conditional themes match, pass the document through without theming.
